# cq-cli

./: .gitignore  README.md  TECH_README.md  cq-cli.py  cq-cli_pyinstaller.spec  pyinstaller.spec  pyproject.toml  setup.py
.github/workflows/: check-commit-actions.yml  check-pr-actions.yml  lint.yml  pyinstaller-builds-actions.yml  pyinstaller-builds.yml  pyinstaller.yml  test_freecad.yml  tests.yml
cqcodecs/: codec_helpers.py  cq_codec_gltf.py  cq_codec_step.py  cq_codec_stl.py  cq_codec_svg.py  loader.py
src/cq_cli/: cq_cli.py  main.py
src/cq_cli/cqcodecs/: codec_helpers.py  cq_codec_dxf.py  cq_codec_glb.py  cq_codec_gltf.py  cq_codec_step.py  cq_codec_stl.py  cq_codec_svg.py  cq_codec_threejs.py  loader.py
tests/: test_cli.py  test_dxf_codec.py  test_freecad.py  test_glb_codec.py  test_gltf_codec.py  test_helpers.py  test_step_codec.py  test_stl_codec.py  test_svg_codec.py  test_threejs_codec.py
tests/testdata/: cube.py  cube_assy.py  cube_params.json  cube_params.py  cube_params_no_default.py  file_var.py  impossible_cube.py  multi_show_object.py  no_toplevel_objects.py  sphere.py  syntax_error.py
