[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cadquery-cli"
version = "2.3.0"
license = {file = "LICENSE"}
authors = [
  { name="Jeremy Wright" },
]
description = "Command Line Interface for executing CadQuery scripts and converting their output to another format."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "cadquery",
  "cadquery_freecad_import_plugin"
]

[project.scripts]
cq-cli = "cq_cli.main:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "black==19.10b0",
  "click==8.0.4"
]

[project.urls]
"Homepage" = "https://github.com/CadQuery/cq-cli"
"Bug Tracker" = "https://github.com/CadQuery/cq-cli/issues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cq_cli"]
